--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,29 @@ spring:
   profiles:
     active: dev
 
+mybatis-plus:
+  type-enums-package: com.xiumu.springbootxiumu.utils.enums
+  global-config:
+    banner: false
+
+# Sa-Token配置
+sa-token:
+  # token名称 (同时也是cookie名称)
+  token-name: XiumuToken
+  # token有效期，单位s 默认30天, -1代表永不过期
+  timeout: -1
+  # token临时有效期 (指定时间内无操作就视为token过期) 单位: 秒
+  activity-timeout: -1
+  # 是否允许同一账号并发登录 (为true时允许一起登录, 为false时新登录挤掉旧登录)
+  is-concurrent: true
+  # 在多人登录同一账号时，是否共用一个token (为true时所有登录共用一个token, 为false时每次登录新建一个token)
+  is-share: false
+  # token风格
+  token-style: uuid
+  # 是否输出操作日志
+  is-log: false
+  # 是否打印图标
+  is-print: false
 
 ---
 
@@ -12,7 +35,7 @@ spring:
   profiles: dev
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql:///books?useUnicode=true&characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql:///xiumu?useUnicode=true&characterEncoding=utf8&useSSL=false
     username: root
     password: root
 
@@ -26,7 +49,7 @@ spring:
   profiles: prod
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql:///books?useUnicode=true&characterEncoding=utf8&useSSL=false
+    url: jdbc:mysql:///xiumu?useUnicode=true&characterEncoding=utf8&useSSL=false
     username: root
     password: root
 
