引入springboot参数校验，实现基本的 RBAC，即用户角色权限控制，移动enums包的位置，引入mybatis分页插件，更新sql文件

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,9 @@ mybatis-plus:
   type-enums-package: com.xiumu.springbootxiumu.enums
   global-config:
     banner: false
+  configuration:
+    map-underscore-to-camel-case: true #驼峰命名转换
+  mapperLocations: classpath:mappers/*.xml
 
 # Sa-Token配置
 sa-token:
