增删改查接口

--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,11 @@
             <artifactId>hutool-core</artifactId>
             <version>${hutool.version}</version>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-crypto</artifactId>
+            <version>${hutool.version}</version>
+        </dependency>
 
         <!-- Bean复制工具MapStruct -->
         <dependency>
