--- a/xiumu-generator/src/main/resources/application.yml
+++ b/xiumu-generator/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   profiles:
     active: dev
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql:///xiumu?useUnicode=true&characterEncoding=utf8&useSSL=false
     username: root
     password: root
