升级 代码生成器模块

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
                 <artifactId>mybatis-plus-boot-starter</artifactId>
                 <version>${mybatis-plus.version}</version>
             </dependency>
+            <!-- 多数据源配置 -->
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+                <version>${mybatis-plus.version}</version>
+            </dependency>
 
             <!--   Hutool 一个小而全的 Java 工具类库   -->
             <dependency>
