--- a/xiumu-generator/pom.xml
+++ b/xiumu-generator/pom.xml
@@ -36,10 +36,21 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+        <!-- H2Database -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
+
         <!--    mybatis-plus    -->
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
+        <!-- 多数据源配置 -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
         </dependency>
 
         <!--    代码生成模板依赖    -->
