--- a/xiumu-generator/src/main/resources/application.yml
+++ b/xiumu-generator/src/main/resources/application.yml
@@ -5,10 +5,22 @@ spring:
   profiles:
     active: dev
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql:///xiumu?useUnicode=true&characterEncoding=utf8&useSSL=false
-    username: root
-    password: root
+    dynamic:
+      primary: xiumu
+      datasource:
+        xiumu:
+          driver-class-name: org.h2.Driver
+          url: jdbc:h2:file:./h2/data
+          username: xiumu
+          password: xiumu
+          lazy: true
+  h2:
+    console:
+      enabled: true
+      settings:
+        web-allow-others: true
+      path: /h2
+
 
 mybatis-plus:
   global-config:
@@ -16,8 +28,6 @@ mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true #驼峰命名转换
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-  mapperLocations: classpath:mapper/*.xml
-
 
 
 
