升级 代码生成器模块

--- a/xiumu-generator/src/main/resources/application.yml
+++ b/xiumu-generator/src/main/resources/application.yml
@@ -23,6 +23,7 @@ spring:
 
 
 mybatis-plus:
+  type-enums-package: com.xiumu.common.core.enums;com.xiumu.generator.enums;
   global-config:
     banner: false
   configuration:
