--- a/xiumu-generator/pom.xml
+++ b/xiumu-generator/pom.xml
@@ -59,6 +59,12 @@
             <artifactId>velocity-engine-core</artifactId>
         </dependency>
 
+        <!-- Sa-Token 权限认证, 在线文档：http://sa-token.dev33.cn/ -->
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot-starter</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.xiumu</groupId>
             <artifactId>common-core</artifactId>
