--- a/xiumu-generator/src/main/resources/application.yml
+++ b/xiumu-generator/src/main/resources/application.yml
@@ -30,7 +30,14 @@ mybatis-plus:
     map-underscore-to-camel-case: true #驼峰命名转换
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
-
+# Sa-Token配置
+sa-token:
+  # token名称 (同时也是 cookie 名称)
+  token-name: XiuMuToken
+  # 是否输出操作日志
+  is-log: false
+  # 是否打印图标
+  is-print: false
 
 
 
