升级 代码生成器模块

--- a/xiumu-admin/src/main/resources/application.yml
+++ b/xiumu-admin/src/main/resources/application.yml
@@ -4,6 +4,8 @@ server:
 spring:
   profiles:
     active: dev
+  main:
+    allow-circular-references: true
 
 mybatis-plus:
   type-enums-package: com.xiumu.common.core.enums;com.xiumu.enums;
