--- a/xiumu-generator/pom.xml
+++ b/xiumu-generator/pom.xml
@@ -53,6 +53,12 @@
             <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
         </dependency>
 
+        <!--    springboot 参数校验    -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
         <!--    代码生成模板依赖    -->
         <dependency>
             <groupId>org.apache.velocity</groupId>
